--- a/netBeans/AutokucaApp/src/main/java/autokuca/view/ProzorProdajnoMjesto.form
+++ b/netBeans/AutokucaApp/src/main/java/autokuca/view/ProzorProdajnoMjesto.form
@@ -31,9 +31,9 @@
                   <Component id="jLabel1" min="-2" pref="140" max="-2" attributes="0"/>
                   <Component id="jLabel2" min="-2" pref="110" max="-2" attributes="0"/>
                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                  <Component id="txtProdavac" alignment="0" pref="244" max="32767" attributes="0"/>
-                  <Component id="txtAdresa" alignment="0" max="32767" attributes="0"/>
+                  <Component id="txtAdresa" alignment="0" pref="244" max="32767" attributes="0"/>
                   <Component id="txtNaziv" alignment="0" max="32767" attributes="0"/>
+                  <Component id="cmbProdavac" max="32767" attributes="0"/>
               </Group>
               <EmptySpace pref="106" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -76,12 +76,12 @@
               <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="txtProdavac" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
                       <Component id="btnPromjena" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="cmbProdavac" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
@@ -130,8 +130,6 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtNaziv">
     </Component>
-    <Component class="javax.swing.JTextField" name="txtProdavac">
-    </Component>
     <Component class="javax.swing.JTextField" name="txtAdresa">
     </Component>
     <Component class="javax.swing.JButton" name="btnDodaj">
@@ -157,6 +155,16 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPromjenaActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="cmbProdavac">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="0"/>
+        </Property>
+      </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Prodavac&gt;"/>
+      </AuxValues>
     </Component>
   </SubComponents>
 </Form>
