--- a/netBeans/AutokucaApp/src/main/java/autokuca/view/ProzorRacun.form
+++ b/netBeans/AutokucaApp/src/main/java/autokuca/view/ProzorRacun.form
@@ -93,10 +93,10 @@
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="cmbProdavac" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="168" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
-              <Component id="jLabel4" max="32767" attributes="0"/>
+              <Component id="jLabel4" pref="27" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="txtUvjet" alignment="3" min="-2" max="-2" attributes="0"/>
